feat: update to recently release ControlsFX lib